RENDEZVOUS-52 : module appointment alert

--- a/webapp/WEB-INF/conf/plugins/genericalert.properties
+++ b/webapp/WEB-INF/conf/plugins/genericalert.properties
@@ -4,3 +4,6 @@
 # Default Labels for XPage
 genericalert.pageTitle=module appointment alert
 genericalert.pagePathLabel=module appointment alert
+
+daemon.AppointmentReminderDaemoninterval=300
+daemon.AppointmentReminderDaemon.onstartup=1
