--- a/webapp/WEB-INF/conf/plugins/genericalert.properties
+++ b/webapp/WEB-INF/conf/plugins/genericalert.properties
@@ -5,5 +5,6 @@
 genericalert.pageTitle=module appointment alert
 genericalert.pagePathLabel=module appointment alert
 
-daemon.AppointmentReminderDaemoninterval=300
+daemon.AppointmentReminderDaemon.interval=300
 daemon.AppointmentReminderDaemon.onstartup=1
+
