RENDEZVOUS-52 :fix sms textArea length

--- a/webapp/WEB-INF/conf/plugins/genericalert.properties
+++ b/webapp/WEB-INF/conf/plugins/genericalert.properties
@@ -5,6 +5,10 @@
 genericalert.pageTitle=module appointment alert
 genericalert.pagePathLabel=module appointment alert
 
+#Appointment reminder daemon
 daemon.AppointmentReminderDaemon.interval=300
 daemon.AppointmentReminderDaemon.onstartup=1
+
+#default maxlength sms textarea 
+genericalert.maxLength.textSms=120
 
