RENDEZVOUS-52 : checkstyle code

--- a/webapp/WEB-INF/conf/plugins/genericalert.properties
+++ b/webapp/WEB-INF/conf/plugins/genericalert.properties
@@ -6,9 +6,15 @@ genericalert.pageTitle=module appointment alert
 genericalert.pagePathLabel=module appointment alert
 
 #Appointment reminder daemon
-daemon.AppointmentReminderDaemon.interval=300
+daemon.AppointmentReminderDaemon.interval=600
 daemon.AppointmentReminderDaemon.onstartup=1
 
+
+#interval deamon
+
+daemon.reminder.interval = 10
 #default maxlength sms textarea 
 genericalert.maxLength.textSms=120
+
+
 
