--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-appt-alert</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Lutece appointment alert module</name>
 
     <repositories>
@@ -57,5 +57,6 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</url>
-    </scm>
+      <tag>gru-module-appointment-alert-1.0.0</tag>
+  </scm>
 </project>
