--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>[4.1.1,)</version>
             <type>lutece-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>library-workflow-core</artifactId>
+            <version>[1.1.1,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
          <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-appointment</artifactId>
