--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
          <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-appointment</artifactId>
-            <version>[1.0.0-SNAPSHOT,2.0.0-a0)</version>
+            <version>[2.0.0-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
          <dependency>
