--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-appt-alert</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <name>Lutece appointment alert module</name>
 
     <repositories>
@@ -56,6 +56,6 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-module-appointment-alert.git</url>
-      <tag>HEAD</tag>
+      <tag>module-appt-alert-2.0.1</tag>
   </scm>
 </project>
