APPTALERT-11 : -Use external parameters instead of CONST values

--- a/webapp/WEB-INF/conf/plugins/genericalert.properties
+++ b/webapp/WEB-INF/conf/plugins/genericalert.properties
@@ -16,5 +16,8 @@ daemon.reminder.interval = 10
 #default maxlength sms textarea 
 genericalert.maxLength.textSms=120
 
+genericalert.senderSms=
+genericalert.prefixSenderSms=
+  
 
 
