--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-appointment-alert</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <name>Lutece appointment alert module</name>
 
     <repositories>
