--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
          <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-appointment</artifactId>
-            <version>[2.0.0,)</version>
+            <version>2.1.0</version>
             <type>lutece-plugin</type>
         </dependency>
          <dependency>
