--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>5.1.1</version>
+        <version>6.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -25,25 +25,25 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[5.0.0,)</version>
+            <version>[7.0.4-SNAPSHOT,)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[4.1.1,)</version>
+            <version>[5.3.0,)</version>
             <type>lutece-plugin</type>
         </dependency>
          <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-appointment</artifactId>
-            <version>[3.0.0,)</version>
+            <version>[3.0.2-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
          <dependency>
 			<groupId>org.mnode.ical4j</groupId>
 			<artifactId>ical4j</artifactId>
-			<version>1.0.5</version>
+			<version>3.2.2</version>
 		</dependency>
     </dependencies>
 
